// Vitest Snapshot v1

exports[`(components) radio button input > (error) take snapshot 1`] = `
<div>
  <input
    aria-label="test"
    id="test"
    name="test"
    type="radio"
    value="test"
  />
  <div
    class="_enshita-radio-input-label-box_cv769_1"
  >
    <label
      for="test"
    >
      Test
    </label>
    <p
      class="_enshita-radio-input-label-text_cv769_12"
    >
      2
    </p>
    <p>
      5
    </p>
  </div>
  <p
    aria-label="error message"
    class="_enshita-input-error_k8dqh_1"
  >
    選択する必要があります
  </p>
</div>
`;

exports[`(components) radio button input > (normal) take snapshot 1`] = `
<div>
  <input
    aria-label="test"
    id="test"
    name="test"
    type="radio"
    value="test"
  />
  <div
    class="_enshita-radio-input-label-box_cv769_1"
  >
    <label
      for="test"
    >
      Test
    </label>
    <p
      class="_enshita-radio-input-label-text_cv769_12"
    >
      2
    </p>
    <p>
      5
    </p>
  </div>
</div>
`;
